// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`misc functions debug! debug value. 1`] = `
"*** LITS DEBUG ***
{
  \\"__LITS_FUNCTION__\\": true,
  \\"type\\": \\"user-defined\\",
  \\"overloads\\": [
    {
      \\"arguments\\": {
        \\"mandatoryArguments\\": [
          \\"%1\\"
        ]
      },
      \\"arity\\": 1,
      \\"body\\": [
        {
          \\"type\\": \\"NormalExpression\\",
          \\"name\\": \\">\\",
          \\"params\\": [
            {
              \\"type\\": \\"Name\\",
              \\"value\\": \\"%1\\"
            },
            {
              \\"type\\": \\"Number\\",
              \\"value\\": 2
            }
          ]
        }
      ],
      \\"functionContext\\": {}
    }
  ]
}
"
`;

exports[`misc functions debug! debug value. 2`] = `
"*** LITS DEBUG ***
{
  \\"__LITS_FUNCTION__\\": true,
  \\"debugInfo\\": {
    \\"line\\": 1,
    \\"column\\": 9,
    \\"code\\": \\"(debug! #(> %1 2))\\"
  },
  \\"type\\": \\"user-defined\\",
  \\"overloads\\": [
    {
      \\"arguments\\": {
        \\"mandatoryArguments\\": [
          \\"%1\\"
        ]
      },
      \\"arity\\": 1,
      \\"body\\": [
        {
          \\"type\\": \\"NormalExpression\\",
          \\"name\\": \\">\\",
          \\"params\\": [
            {
              \\"type\\": \\"Name\\",
              \\"value\\": \\"%1\\",
              \\"token\\": {
                \\"type\\": \\"name\\",
                \\"value\\": \\"%1\\",
                \\"debugInfo\\": {
                  \\"line\\": 1,
                  \\"column\\": 13,
                  \\"code\\": \\"(debug! #(> %1 2))\\"
                }
              }
            },
            {
              \\"type\\": \\"Number\\",
              \\"value\\": 2,
              \\"token\\": {
                \\"type\\": \\"number\\",
                \\"value\\": \\"2\\",
                \\"debugInfo\\": {
                  \\"line\\": 1,
                  \\"column\\": 16,
                  \\"code\\": \\"(debug! #(> %1 2))\\"
                }
              }
            }
          ],
          \\"token\\": {
            \\"type\\": \\"name\\",
            \\"value\\": \\">\\",
            \\"debugInfo\\": {
              \\"line\\": 1,
              \\"column\\": 11,
              \\"code\\": \\"(debug! #(> %1 2))\\"
            }
          }
        }
      ],
      \\"functionContext\\": {}
    }
  ]
}
"
`;

exports[`misc functions debug! multiple contexts 1`] = `
"*** LITS DEBUG ***
Context 0
  z  10

Context 1 - Global context
  y  20

Context 2
  x     10
  foo   <user-defined function foo>
  bar   <user-defined function λ>
  plus  <builtin function +>


"
`;

exports[`misc functions debug! multiple contexts 2`] = `
"*** LITS DEBUG ***
Context 0
  z  10

Context 1 - Global context
  y  20

Context 2
  x     10
  foo   <user-defined function foo>
  bar   <user-defined function λ>
  plus  <builtin function +>


"
`;
